#3628 Add locale support for MapMapping & IterableMapping annotation